<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainRLayout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    >
    

    <!-- 自定义滑动控件 -->
    <com.view.guide.ScrollLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollLayout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:visibility="visible" 
        >
	<!-- 每一页的布局均以一个RelativeLayout来控制，后面类似，这里一共四个 -->
        <FrameLayout 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
			>
				
			<ImageView 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:scaleType="centerCrop"
			    android:src="@drawable/loading_bg_01" 
			    android:contentDescription="@null"/>
			<Button 
			    android:id="@+id/btn_guide_goto_main_01"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/to_main"
		        android:background="@null"
		        android:textColor="@color/white"
		        android:textSize="20sp"
		        android:gravity="right"
		        android:layout_marginTop="15dp"
		        android:layout_marginRight = "15dp"/>	
	    	<TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/app_name"
	            android:textSize="22sp"
	            android:textColor="@color/black"
	            android:layout_gravity="center"
	            android:layout_marginTop="70dp"
	            />
	  		<TextView 
	   		    android:id="@+id/tv_guide_notice_1"
	   		    android:layout_width="wrap_content"
	   		    android:layout_height="wrap_content"
	   		    android:text="@string/guide_notice_1"
	   		    android:textSize="18sp"
	   		    android:textColor="@color/black"
	   		    android:layout_gravity="center"
	            android:layout_marginTop="110dp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	   		    />
		</FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
	  		<ImageView 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:scaleType="centerCrop"
			    android:src="@drawable/loading_bg_02"
			    android:contentDescription="@null"/>
	  		<Button 
			    android:id="@+id/btn_guide_goto_main_02"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/to_main"
		        android:background="@null"
		        android:textColor="@color/white"
		        android:textSize="20sp"
		        android:gravity="right"
		        android:layout_marginTop="15dp"
		        android:layout_marginRight = "15dp"/>	
    		<TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_title_2"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
	            android:layout_marginTop="70dp"
                />
    		<TextView 
    		    android:id="@+id/tv_guide_notice_2"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/guide_notice_2"
    		    android:textSize="20sp"
    		    android:textColor="@color/black"
    		    android:layout_gravity="center"
	            android:layout_marginTop="110dp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
    		    />
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/loading_bg_03" >
    		<Button 
			    android:id="@+id/btn_guide_goto_main_03"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/to_main"
		        android:background="@null"
		        android:textColor="@color/white"
		        android:textSize="20sp"
		        android:gravity="right"
		        android:layout_marginTop="15dp"
		        android:layout_marginRight = "15dp"/>	
		    <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_title_3"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
	            android:layout_marginTop="70dp"
                />
    		<TextView 
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/guide_notice_3"
    		    android:textSize="20sp"
    		    android:textColor="@color/black"
    		    android:layout_gravity="center"
	            android:layout_marginTop="110dp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
    		    />
		<!-- 点击该按钮后就进入OtherActivit了 -->
            <Button
                android:id="@+id/btn_star"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_bg"
                android:text="立即体验"
                android:textColor="#FFFFFF"
                android:textSize="16sp" 
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="25dp"/>
        </FrameLayout>
    </com.view.guide.ScrollLayout>
	
    <!-- 这个布局是下面显示的小圆点的布局，其中ImageView的数量要与上面RelativeLayout的数量对应 -->
    <LinearLayout
        android:id="@+id/llayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        android:visibility="visible" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:padding="5dp"
            android:src="@drawable/page_indicator_bg" 
            android:contentDescription="@null"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:padding="5dp"
            android:src="@drawable/page_indicator_bg" 
            android:contentDescription="@null"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:padding="5dp"
            android:src="@drawable/page_indicator_bg" 
            android:contentDescription="@null"/>

        
    </LinearLayout>

</RelativeLayout>
