<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/white"
    android:id="@+id/sv_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:background="@color/white">
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
        >

        <com.view.circleimageview.CircleImageView
            android:id="@+id/civ_searched_item_user_icon"
            android:layout_width="60dp"
            android:layout_height="60dp" 
            android:src="@drawable/app_logo"
            android:layout_marginStart="15dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"/>
        <TextView 
            android:id="@+id/tv_searched_item_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_toEndOf="@id/civ_searched_item_user_icon"
            android:layout_alignParentTop="true"
            android:textSize="15sp"
            android:hint="user_name_flp"
            android:layout_marginTop="18dp"
            />
        <TextView 
            android:id="@+id/tv_searched_item_help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/civ_searched_item_user_icon"
            android:layout_below="@id/tv_searched_item_user_name"
            android:textSize="14sp"
            android:hint="人丢啦，怎么办？！balabalagkfthp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            />

        <GridView
            android:id="@+id/gv_searched_item_help_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tv_searched_item_help_text"
            android:layout_toEndOf="@id/civ_searched_item_user_icon"
            android:horizontalSpacing="5dp"
            android:numColumns="4"
            android:verticalSpacing="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="15dp" 
            />

        <ImageView 
            android:id="@+id/iv_searched_item_icon_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_distance_loc"
            android:layout_toEndOf="@id/civ_searched_item_user_icon"
            android:layout_below="@id/gv_searched_item_help_photo"
            android:contentDescription="@null"/> 
            
        <TextView 
            android:id="@+id/tv_searched_item_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gv_searched_item_help_photo"
            android:layout_toEndOf="@id/iv_searched_item_icon_loc"
            android:text="正在获取..."
            android:textColor="@color/royalblue"
            android:layout_marginStart="8dp"
            android:textSize="15sp"/>
       <LinearLayout 
           android:id="@+id/layout_comment"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:background="@color/transparent"
           android:layout_toEndOf="@+id/tv_searched_item_distance"
           android:layout_below="@id/gv_searched_item_help_photo"
           android:orientation="horizontal"
           android:layout_marginEnd="20dp"
           android:layout_alignParentEnd="true"
           android:gravity="end">
           <ImageView 
            android:id="@+id/iv_searched_item_icon_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_comment"
            android:layout_marginEnd="8dp"
            android:contentDescription="@null"/> 
        <TextView 
            android:id="@+id/tv_searched_item_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_comment_name"
            android:gravity="end"
            android:textColor="@color/gray"
            android:textSize="15sp"/>
       </LinearLayout> 
        


        <ImageView 
            android:id="@+id/iv_searched_item_black_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/black_line"
            android:layout_below="@id/layout_comment"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@null"/> 
          
       <com.view.listviewforscrollview.InnerListView
            android:id="@+id/lv_search_item_help_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:divider="@null" 
            android:layout_toEndOf="@id/iv_searched_item_icon_loc" 
            android:layout_below="@id/iv_searched_item_black_line">
        </com.view.listviewforscrollview.InnerListView>
		<RelativeLayout
            android:id="@+id/layout_new_comment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/lv_search_item_help_message"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true" 
            android:visibility="gone">

            <EditText
                android:id="@+id/edt_searched_item_newcomment"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_toStartOf="@+id/btn_searched_item_newcomment"
                android:background="@drawable/search_bar_edit_normal"
                android:gravity="center_vertical"
                android:inputType="textMultiLine"
                android:hint="评论文本"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_searched_item_newcomment"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_bg"
                android:layout_margin="3dp"
                android:padding="10dp"
                android:text="@string/str_comment_send"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>
        


    </RelativeLayout>


    
    <Button
        android:id="@+id/btn_searched_item_help_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/str_search_item_help_search"
        />
        
    </LinearLayout>
    

</ScrollView>
